digisign sign callback
